# Parrot-Anafi-Person-Search-with-Deep-Learning

./: README.md
anafi_person_search_interfaces/: CMakeLists.txt  package.xml
anafi_person_search_interfaces/srv/: FaceKeyPoints.srv
anafi_person_search_nodes/: CMakeLists.txt  package.xml
anafi_person_search_nodes/include/yolov8/: yolov8.h
anafi_person_search_nodes/libs/tensorrt-cpp-api/: CMakeLists.txt
anafi_person_search_nodes/libs/tensorrt-cpp-api/src/: cmd_line_parser.h  engine.cpp  engine.h
anafi_person_search_nodes/simulation_config/: sphinx_config.yaml
anafi_person_search_nodes/src/: RTSPcam.cpp  anafi_face_reubication.cpp  anafi_flightplan_action.cpp  anafi_person_detect.cpp  anafi_rtsp_stream_video.cpp  test_anafi_flightplan_action.cpp  yolov8.cpp
